--- a/54-Fullstack-JS/backend/.env
+++ b/54-Fullstack-JS/backend/.env
@@ -1,3 +1,11 @@
 MONGO_URI=mongodb+srv://root:root@cluster0.syw8d.mongodb.net/apv
 
 JWT_SECRET=palabraSuperSecreta
+
+
+EMAIL_USER=0b17608cebb21e
+EMAIL_PASS=37291dc8ca8df5
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+
+FRONTEND_URL=http://localhost:3000
